--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,48 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p,
+b {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+img{
+  outline: 1px solid black;
+}
+
+.speedInfo{
+  display: flex;
+  align-items: center;
+}
+.fullInfo{
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
+}
+.title_country{
+  display: flex;
+  align-items: center;
+}
+.title{
+  margin-left: 10px;
+}
