--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,9 +43,6 @@ li {
   padding: 0;
   margin: 0;
 }
-img{
-  outline: 1px solid black;
-}
 
 .speedInfo{
   display: flex;
@@ -55,11 +52,16 @@ img{
   display: flex;
   flex-direction: column;
   margin: 20px 0;
+  width: 400px;
 }
+
 .title_country{
   display: flex;
   align-items: center;
 }
 .title{
-  margin-left: 10px;
+  margin-left: 20px;
+}
+.capital{
+  width: 300px;
 }
